# Localino-ROS

./: README.md
udp_localino_ros/: CMakeLists.txt  package.xml  readme.txt
udp_localino_ros/launch/: launch.launch
udp_localino_ros/msg/: udp_msg.msg
udp_localino_ros/src/: soc.py
