<?xml version="1.0"?>
<package format="2">
  <name>udp_localino_ros</name>
  <version>0.0.0</version>
  <description>The udp_localino_ros package</description>
  <maintainer email="balasubramanyam.evani@gmail.com">Balasubramanyam Evani</maintainer>

  <license>MIT</license>
  <author email="balasubramanyam.evani@gmail.com">Balasubramanyam Evani</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

 
</package>
